--- a/AirsoftApplication/Web/AirsoftApplication.Web/Areas/Administration/Views/Events/AddImages.cshtml
+++ b/AirsoftApplication/Web/AirsoftApplication.Web/Areas/Administration/Views/Events/AddImages.cshtml
@@ -1,31 +1,38 @@
 ﻿@model AirsoftApplication.Web.ViewModels.Administration.Events.InputEventImagesViewModel
 
-<h4>
-    <a asp-area="" asp-controller="Home" asp-action="Index" class="link-primary">Home</a>/<a asp-controller="Dashboard" asp-action="Index" class="link-primary">Dashboard</a>/AddImages
-</h4>
-@{
-    ViewData["Title"] = "Add field";
-}
-
-<br />
-
-<div class="photo-gallery">
-    <div class="container">
-        <div class="intro">
-            <h2 class="text-center">Event Images</h2>
-            <p class="text-center">Nunc luctus in metus eget fringilla. Aliquam sed justo ligula. Vestibulum nibh erat, pellentesque ut laoreet vitae. </p>
+<div class="header bg-primary pb-6">
+    <div class="container-fluid">
+        <div class="header-body">
+            <div class="row align-items-center py-4">
+                <div class="col-lg-6 col-7">
+                    <h6 class="h2 text-white d-inline-block mb-0">Tables</h6>
+                    <nav aria-label="breadcrumb" class="d-none d-md-inline-block ml-md-4">
+                        <ol class="breadcrumb breadcrumb-links breadcrumb-dark">
+                            <li class="breadcrumb-item"><a><i class="fas fa-home"></i></a></li>
+                            <li class="breadcrumb-item"><a asp-controller="Dashboard" asp-action="Index">Dashboards</a></li>
+                            <li class="breadcrumb-item"><a asp-controller="Events" asp-action="CreateEvent">Event</a></li>
+                            <li class="breadcrumb-item active" aria-current="page">Add Images</li>
+                        </ol>
+                    </nav>
+                </div>
+                <div class="col-lg-6 col-5 text-right">
+                    <a asp-area="" asp-controller="Team" asp-action="Events" class="btn btn-sm btn-neutral">
+                        All Events
+                    </a>
+                </div>
+            </div>
         </div>
     </div>
 </div>
-
-        <form asp-action="AddImages" enctype="multipart/form-data">
-            <div class="form-group">
-                <label asp-for="Images" class="control-label alert-heading">Image</label>
-                <input asp-for="Images" class="form-control  alert-heading" type="file" multiple>
-                <span asp-validation-for="Images" class="text-danger"></span>
-            </div>
-            <input asp-for="EventId" class="form-control  alert-heading" type="hidden">
-            <div class="form-group">
-                <input type="submit" value="Add Images" class="btn btn-primary" />
-            </div>
-        </form>
+<hr/>
+<form asp-action="AddImages" enctype="multipart/form-data">
+    <div class="form-group">
+        <label asp-for="Images" class="control-label alert-heading">Images</label>
+        <input asp-for="Images" class="form-control  alert-heading" type="file" multiple>
+        <span asp-validation-for="Images" class="text-danger"></span>
+    </div>
+    <input asp-for="EventId" class="form-control  alert-heading" type="hidden">
+    <div class="form-group">
+        <input type="submit" value="Add Images" class="btn btn-primary" />
+    </div>
+</form>
