--- a/AirsoftApplication/Web/AirsoftApplication.Web/Areas/Administration/Views/Dashboard/AllMessages.cshtml
+++ b/AirsoftApplication/Web/AirsoftApplication.Web/Areas/Administration/Views/Dashboard/AllMessages.cshtml
@@ -9,7 +9,7 @@
                     <nav aria-label="breadcrumb" class="d-none d-md-inline-block ml-md-4">
                         <ol class="breadcrumb breadcrumb-links breadcrumb-dark">
                             <li class="breadcrumb-item"><a><i class="fas fa-home"></i></a></li>
-                            <li class="breadcrumb-item"><a asp-action="Index">Dashboards</a></li>
+                            <li class="breadcrumb-item"><a asp-controller="Dashboard" asp-action="Index">Dashboards</a></li>
                             <li class="breadcrumb-item active" aria-current="page">Messages</li>
                         </ol>
                     </nav>
@@ -17,96 +17,128 @@
                 <div class="col-lg-6 col-5 text-right">
                     <a href="#" class="btn btn-sm btn-neutral">New</a>
                     <a asp-controller="Dashboard" asp-action="AllMessages" class="btn btn-sm btn-neutral">
-                        <i class="fas fa-bell"></i>  Messages
+                        <i class="fas fa-bell"></i> Messages
                     </a>
                 </div>
             </div>
         </div>
     </div>
-    <div class="col-md-12">
-        <div class="table-responsive">
-            <table class="table align-items-center table-flush">
-                <thead class="thead-light">
-                    <tr>
-                        <th scope="col" class="sort" data-sort="sendOn">Send on</th>
-                        <th scope="col" class="sort" data-sort="email">Email</th>
-                        <th scope="col" class="sort" data-sort="username">Username</th>
-                        <th scope="col" class="sort" data-sort="subject">Subject</th>
-                        <th scope="col" class="sort" data-sort="content">Content</th>
-                        <th scope="col" class="sort" data-sort="status">Status</th>
-                        <th scope="col"></th>
-                    </tr>
-                </thead>
-                @foreach (var message in Model)
-                {
-                    <tbody class="list">
-                        <tr>
-                            <th scope="row">
-                                <div class="media align-items-center">
-                                    <div class="media-body">
-                                        <span class="sendon mb-0 text-sm">@message.CreatedOn</span>
-                                    </div>
-                                </div>
-                            </th>
+</div>
 
-                            <th scope="row">
-                                <div class="media align-items-center">
-                                    <div class="media-body">
-                                        <span class="email mb-0 text-sm">@message.Email</span>
+<div class="container-fluid mt--6">
+    <div class="row">
+        <div class="col">
+            <div class="card">
+                <!-- Card header -->
+                <div class="card-header border-0">
+                    <h3 class="mb-0">Messages</h3>
+                </div>
+                <!-- Light table -->
+                <div class="table-responsive">
+                    <table class="table align-items-center table-flush">
+                        <thead class="thead-light">
+                            <tr>
+                                <th scope="col" class="sort" data-sort="date">Date</th>
+                                <th scope="col" class="sort" data-sort="username">Username</th>
+                                <th scope="col" class="sort" data-sort="email">Email</th>
+                                <th scope="col" class="sort" data-sort="subject">Subject</th>
+                                <th scope="col" class="sort" data-sort="content">Content</th>
+                                <th scope="col" class="sort" data-sort="status">Status</th>
+                            </tr>
+                        </thead>
+                        <tbody class="list">
+                            @foreach (var message in Model)
+                            {
+                            <tr>
+                                <th scope="row">
+                                    <div class="media align-items-center">
+                                        <div class="media-body">
+                                            <span class="name mb-0 text-sm">@message.CreatedOn</span>
+                                        </div>
                                     </div>
-                                </div>
-                            </th>
-                            <th scope="row">
-                                <div class="media align-items-center">
-                                    <div class="media-body">
-                                        <span class="username mb-0 text-sm">@message.Username</span>
+                                </th>
+                                <th scope="row">
+                                    <div class="media align-items-center">
+                                        <div class="media-body">
+                                            <span class="name mb-0 text-sm">@message.Username</span>
+                                        </div>
                                     </div>
-                                </div>
-                            </th>
-                            <th scope="row">
-                                <div class="media align-items-center">
-                                    <div class="media-body">
-                                        <span class="subject mb-0 text-sm">@message.Subject</span>
+                                </th>
+                                <th scope="row">
+                                    <div class="media align-items-center">
+                                        <div class="media-body">
+                                            <span class="name mb-0 text-sm">@message.Email</span>
+                                        </div>
                                     </div>
-                                </div>
-                            </th>
-                            <th>
-                                <div class="media align-items-center">
-                                    <div class="media-body">
-                                        <a class="nav-link active" aria-current="page" asp-action="MessageById" asp-route-messageId="@message.Id">Content</a>
+                                </th>
+                                <th scope="row">
+                                    <div class="media align-items-center">
+                                        <div class="media-body">
+                                            <span class="name mb-0 text-sm">@message.Subject</span>
+                                        </div>
                                     </div>
-                                </div>
-                            </th>
-                            <th scope="row">
-                                <div class="media align-items-center">
-                                    <div class="media-body">
-                                        @if (message.HasBeenRead)
-                                        {
-                                            <span class="badge badge-dot mr-4">
-                                                <i class="bg-success"></i>
-                                                <span class="status">answered </span>
-                                            </span>
-                                        }
-                                        else
-                                        {
-                                            <span class="badge badge-dot mr-4">
-                                                <i class="bg-warning"></i>
-                                                <span class="status">not answered  </span>
-                                            </span>
-                                        }
+                                </th>
+                                <th scope="row">
+                                    <div class="media align-items-center">
+                                        <a asp-action="MessageById" asp-controller="Dashboard" asp-route-messageId="@message.Id">
+                                            <div class="media-body">
+                                                <span class="name mb-0 text-sm">Content</span>
+                                            </div>
+                                        </a>
+                                    </div>
+                                </th>
+                                <td>
+                                    @if (message.HasBeenRead)
+                                    {
+                                        <span class="badge badge-dot mr-4">
+                                            <i class="bg-green"></i>
+                                            <span class="status"></span>
+                                        </span>
+                                    }
+                                    else
+                                    {
+                                        <span class="badge badge-dot mr-4">
+                                            <i class="bg-red"></i>
+                                            <span class="status"></span>
+                                        </span>
+                                    }
+                                </td>
+                                <td>
+                                </td>
+                            </tr>
+                            }
+                    </table>
 
-
-                                        <span class="status mb-0 text-sm"></span>
-                                    </div>
-                                </div>
-                            </th>
-                        </tr>
-                    </tbody>
-                }
-            </table>
+                    <!-- Card footer -->
+                    <div class="card-footer py-4">
+                        <nav aria-label="...">
+                            <ul class="pagination justify-content-end mb-0">
+                                <li class="page-item disabled">
+                                    <a class="page-link" href="#" tabindex="-1">
+                                        <i class="fas fa-angle-left"></i>
+                                        <span class="sr-only">Previous</span>
+                                    </a>
+                                </li>
+                                <li class="page-item active">
+                                    <a class="page-link" href="#">1</a>
+                                </li>
+                                <li class="page-item">
+                                    <a class="page-link" href="#">2 <span class="sr-only">(current)</span></a>
+                                </li>
+                                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                                <li class="page-item">
+                                    <a class="page-link" href="#">
+                                        <i class="fas fa-angle-right"></i>
+                                        <span class="sr-only">Next</span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
-
 
 
