--- a/AirsoftApplication/Web/AirsoftApplication.Web/Areas/Administration/Views/Dashboard/MessageById.cshtml
+++ b/AirsoftApplication/Web/AirsoftApplication.Web/Areas/Administration/Views/Dashboard/MessageById.cshtml
@@ -9,16 +9,16 @@
                     <nav aria-label="breadcrumb" class="d-none d-md-inline-block ml-md-4">
                         <ol class="breadcrumb breadcrumb-links breadcrumb-dark">
                             <li class="breadcrumb-item"><a><i class="fas fa-home"></i></a></li>
-                            <li class="breadcrumb-item"><a asp-action="Index">Dashboards</a></li>
-                            <li class="breadcrumb-item"><a asp-action="AllMessages">AllMessages</a></li>
-                            <li class="breadcrumb-item active" aria-current="page">ReturnAnswer</li>
+                            <li class="breadcrumb-item"><a asp-controller="Dashboard" asp-action="Index">Dashboards</a></li>
+                            <li class="breadcrumb-item"><a asp-action="AllMessages">Messages</a></li>
+                            <li class="breadcrumb-item active" aria-current="page">Return Answer</li>
                         </ol>
                     </nav>
                 </div>
                 <div class="col-lg-6 col-5 text-right">
-                    <a href="#" class="btn btn-sm btn-neutral">New</a>
+                    <a asp-area="" asp-controller="Contacts" asp-action="Index" class="btn btn-sm btn-neutral">New</a>
                     <a asp-controller="Dashboard" asp-action="AllMessages" class="btn btn-sm btn-neutral">
-                        <i class="fas fa-bell"></i>  Messages
+                        <i class="fas fa-bell"></i> All Messages
                     </a>
                 </div>
             </div>
@@ -26,55 +26,68 @@
     </div>
 </div>
 
-<div class="row justify-content-center">
-    <div class="col-lg-5 col-md-6">
-        <div class="col-md-12 mt-3">
-            <div style="width: 25rem;">
-                <div class="card card-stats">
-                    <!-- Card body -->
-                    <div class="card-body">
-                        <div class="row">
-                            <div class="col">
-                                <h5 class="card-title text-uppercase text-muted mb-0">Content</h5>
-                            </div>
-                            <div class="col-auto">
-                                <div class="icon icon-shape bg-green text-white rounded-circle shadow">
-                                    <i class="fas fa-envelope-open-text"></i>
-                                </div>
-                            </div>
+
+<div class="container-fluid mt--6">
+    <div class="row">
+        <div class="col-xl-6 order-xl-2">
+            <div class="card">
+                <div class="card-header">
+                    <div class="row align-items-center">
+                        <div class="col-8">
+                            <h3 class="mb-0">Message content </h3>
                         </div>
-                        <p class="mt-3 mb-0 text-lg">
-                            @Model.Content
-                        </p>
                     </div>
                 </div>
+                <div class="card-body pt-0">
+                    <div class="row">
+                    </div>
+                    <div class="text-center">
+                        <h5 class="h3">
+                            @Model.Username <span class="font-weight-light"></span>
+                        </h5>
+                        <div class="h5 font-weight-300">
+                            <i class="ni location_pin mr-2"></i>@Model.Email
+                        </div>
+                    </div>
+                </div>
+                <p class="mt-3 mb-0 text-lg text-center">
+                    @Model.Content
+                </p>
             </div>
-
         </div>
-
+        <div class="col-xl-6 order-xl-1">
+            <div class="card">
+                <div class="card-header">
+                    <div class="row align-items-center">
+                        <div class="col-8">
+                            <h3 class="mb-0">Return answer </h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-body">
+                    <form asp-controller="Messages" asp-action="ReturnAnswer" enctype="multipart/form-data">
+                        <div class="form-group">
+                            <input type="hidden" asp-for="Id" class="form-control" />
+                        </div>
+                        <div class="form-group">
+                            <input type="hidden" asp-for="Email" class="form-control" />
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="MessageSubject" class="control-label">Subject</label>
+                            <input asp-for="MessageSubject" class="form-control" />
+                            <span asp-validation-for="MessageSubject" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="MessageContent" class="control-label">Message</label>
+                            <textarea rows="5" asp-for="MessageContent" class="form-control"></textarea>
+                            <span asp-validation-for="MessageContent" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <input type="submit" value="Send" class="btn btn-primary" />
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
-
 </div>
-
-
-<form asp-controller="Messages" asp-action="ReturnAnswer" enctype="multipart/form-data">
-    <div class="form-group">
-        <input type="hidden" asp-for="Id" class="form-control" />
-    </div>
-    <div class="form-group">
-        <input type="hidden" asp-for="Email" class="form-control" />
-    </div>
-    <div class="form-group">
-        <label asp-for="MessageSubject" class="control-label">Subject</label>
-        <input asp-for="MessageSubject" class="form-control" />
-        <span asp-validation-for="MessageSubject" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for="MessageContent" class="control-label">Message</label>
-        <textarea rows="5" asp-for="MessageContent" class="form-control"></textarea>
-        <span asp-validation-for="MessageContent" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <input type="submit" value="Send" class="btn btn-primary" />
-    </div>
-</form>
