--- a/AirsoftApplication/Web/AirsoftApplication.Web/Views/Shared/_AdministrationLayout.cshtml
+++ b/AirsoftApplication/Web/AirsoftApplication.Web/Views/Shared/_AdministrationLayout.cshtml
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="~/lib/fontawesome/css/all.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/css/argon.css?v=1.2.0" type="text/css">
+    <link rel="stylesheet" href="~/css/argon.min.css" type="text/css">
 </head>
 <body>
     <nav class="sidenav navbar navbar-vertical  fixed-left  navbar-expand-xs navbar-light bg-white" id="sidenav-main">
@@ -24,49 +24,28 @@
                     <ul class="navbar-nav">
 
                         <li class="nav-item">
-                            <a class="nav-link" asp-action="CreateEvent">
+                            <a class="nav-link" asp-controller="Events" asp-action="CreateEvent">
                                 <i class="fas fa-bullhorn text-primary"></i>
                                 <span class="nav-link-text">Event</span>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-action="AllProducts">
-                                <i class="fab fa-shopify text-yellow"></i>
-
-                                <span class="nav-link-text">Products</span>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-action="AllUsersInfo">
+                            <a class="nav-link" asp-controller="Users" asp-action="AllPlayers">
                                 <i class="far fa-address-card text-green"></i>
-                                <span class="nav-link-text">Tables</span>
+                                <span class="nav-link-text">Users</span>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-action="AddProduct">
-                                <i class="fas fa-dolly-flatbed text-info"></i>
-                                <span class="nav-link-text">Add product</span>
+                            <a class="nav-link" asp-controller="Dashboard" asp-action="CreateRole">
+                                <i class="fas fa-user-tag text-orange"></i>
+                                <span class="nav-link-text">Role Manager</span>
                             </a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="examples/register.html">
-                                <i class="ni ni-circle-08 text-pink"></i>
-                                <span class="nav-link-text">Register</span>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="examples/upgrade.html">
-                                <i class="fab fa-amazon-pay"></i>
-                                <span class="nav-link-text">Upgrade</span>
-                            </a>
-                        </li>
+
                     </ul>
                     <!-- Divider -->
                     <hr class="my-3">
-                    <!-- Heading -->
-                    <h6 class="navbar-heading p-0 text-muted">
-                        <span class="docs-normal">Documentation</span>
-                    </h6>
+                    
                 </div>
             </div>
         </div>
